Live coding stage 0

--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "db:seeds": "knex seed:run --esm",
     "start": "node .",
     "dev": "DEBUG=knex:query nodemon",
-    "dev:greedy": "RESOLVERS=GREEDY DEBUG=knex:query nodemon",
-    "dev:lazy": "RESOLVERS=LAZY DEBUG=knex:query nodemon",
-    "dev:optimized": "RESOLVERS=OPTIMIZED DEBUG=knex:query nodemon"
+    "dev:greedy": "RESOLVERS=GREEDY DEBUG=knex:query nodemon src/for-live-coding",
+    "dev:lazy": "RESOLVERS=LAZY DEBUG=knex:query nodemon src/for-live-coding",
+    "dev:optimized": "RESOLVERS=OPTIMIZED DEBUG=knex:query nodemon src/for-live-coding"
   },
   "dependencies": {
     "apollo-server": "^2.14.2",
